# xcom

./: CMakeLists.txt  README.md  index.html
docs/: download.html  index.html  installation.html  main.css  tutorial.html
idl/xcom/: ILibrary.idl  IUnknown.idl
idl/xcom/metadata/: MDTypes.idl
include/xcom/: ArrayBase.hpp  ExcHelper.hpp  ExcImpl.inc  GUID.hpp  ILibrary.hpp  ILibraryTie.hpp  IUnknown.hpp  IUnknownTie.hpp  ImplHelper.hpp  Integral.hpp  Loader.hpp  MDHelper.hpp  Memory.hpp  Portability.hpp  SequenceBase.hpp  String.hpp  Types.hpp
include/xcom/metadata/: Array.hpp  Declared.hpp  Delegate.hpp  Enum.hpp  Exception.hpp  Interface.hpp  MDTypes.hpp  MDTypesTie.hpp  Sequence.hpp  Struct.hpp  StructBase.hpp  Type.hpp
src/: CMakeLists.txt  ExcImpl.cpp  GUID.cpp  Loader.cpp  MDHelper.cpp  Memory.cpp  StrHelper.cpp
src/platform/linux/: Atomic.cpp  Filesystem.cpp  GUID.cpp  Mutex.cpp  SharedLibrary.cpp
templates/: README.txt  library.txt
